--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -1,12 +1,68 @@
-<!DOCTYPE html>
+<!DOCTYPE HTML>
 <html>
-    <head>
-        <meta charset="UTF-8">
-        <title>{% block title %}Welcome!{% endblock %}</title>
-        {% block stylesheets %}{% endblock %}
-    </head>
-    <body>
-        {% block body %}{% endblock %}
-        {% block javascripts %}{% endblock %}
+<head>
+    <meta charset="UTF-8">
+    <title>{% block title %}Paris Esports{% endblock %}</title>
+    <link rel="shortcut icon" type="image/png" href="{{ asset('images/favicon.png') }}">
+    <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
+    <link rel="stylesheet" href="{{ asset('css/main.css') }}">
+    <link rel="stylesheet" href="{{ asset('css/styles.css') }}">
+    <noscript><link rel="stylesheet" href="{{ asset('css/noscript.css') }}"></noscript>
+    {% block stylesheets %}{% endblock %}
+</head>
+<body class="is-preload">
+    <br>
+    <div id="wrapper">
+        <span class="image main">
+            <img src="{{ asset('images/picpe.jpg') }}" alt="">
+        </span>
+
+        <nav id="nav">
+            <ul>
+                <li><a href="{{ path('app_app_index') }}" {{ app.request.attributes.get('_route') == 'app_app_index' ? 'class=\'active\'' }}>Accueil</a></li>
+                <li><a href="{{ path('app_app_association') }}" {{ app.request.attributes.get('_route') == 'app_app_association' ? 'class=\'active\'' }}>Association</a></li>
+                <li><a href="{{ path('app_app_contact') }}" {{ app.request.attributes.get('_route') == 'app_app_contact' ? 'class=\'active\'' }}>Contact</a></li>
+                <li><a href="{{ path('app_app_membership') }}" {{ app.request.attributes.get('_route') == 'app_app_membership' ? 'class=\'active\'' }}>Adhésion</a></li>
+            </ul>
+        </nav>
+        
+        <div id="main">
+            <section id="content" class="main">
+                {% block body %}{% endblock %}
+            </section>
+        </div>
+
+        <footer id="footer">
+            <section>
+                <h2>Paris Esports</h2>
+                <p>L’association pour fédérer l'écosystème esportif parisien !</p>
+                <ul class="actions">
+                    <li><a href="{{ path('app_app_membership') }}" class="button">Adhérer</a></li>
+                </ul>
+            </section>
+            <section>
+                <h2>Coordonnées</h2>
+                <dl class="alt">
+                    <dt>Addresse</dt>
+                    <dd>157, boulevard McDonald 75019 Paris, France </dd>
+                    <dt>Email</dt>
+                    <dd><a href="mailto:bonjour@esports.paris">bonjour@esports.paris</a></dd>
+                </dl>
+                <ul class="icons">
+                    <li><a href="https://twitter.com/Paris_Esports" class="icon fa-twitter alt"><span class="label">Twitter</span></a></li>
+                </ul>
+            </section>
+            <p class="copyright">Paris esports &copy; Tous droits réservés.</p>
+        </footer>
+    </div>
+
+    <script src="{{ asset('js/jquery.min.js') }}"></script>
+    <script src="{{ asset('js/jquery.scrollex.min.js') }}"></script>
+    <script src="{{ asset('js/jquery.scrolly.min.js') }}"></script>
+    <script src="{{ asset('js/browser.min.js') }}"></script>
+    <script src="{{ asset('js/breakpoints.min.js') }}"></script>
+    <script src="{{ asset('js/util.js') }}"></script>
+    <script src="{{ asset('js/main.js') }}"></script>
+    {% block javascripts %}{% endblock %}
     </body>
 </html>
