--- a/templates/app/contact.html.twig
+++ b/templates/app/contact.html.twig
@@ -2,8 +2,8 @@
 
 {% block body %}
 <p class="text-justify">
-    Vous êtes un adhérent et avez besoin d’une information ou vous êtes une institution et souhaitez en savoir plus sur les activités possible de Paris esports, 
-    le formulaire ci -dessous nous permet de nous contacter dans les plus brefs délais et nous apportons une réponse adaptée le plus rapidement possible.
+    Vous êtes un adhérent et avez besoin d’une information ? Ou vous êtes une institution et souhaitez en savoir plus sur les activités de Paris esports ?<br>
+    Le formulaire ci-dessous vous permet de nous contacter et nous apportons une réponse adaptée dans les plus brefs délais.
 </p>
 
 {{ form_start(form) }}
@@ -35,5 +35,9 @@
 </div>
 {{ form_end(form) }}
 
-<p class="text-justify">Vous êtes de la presse ? Vous retrouverez les ressources graphiques de Paris esports via ce lien. Les communiqués de presse sont fourni au formats en fin de chaque actualité.</p>
+<p class="text-justify">
+    Vous êtes de la presse ?<br>
+    Vous retrouverez les ressources graphiques de Paris esports via <a href="bit.ly/2FtLq1P" target="_blank">ce lien</a>.<br>
+     Les communiqués de presse sont fournis au format PDF en fin de chaque actualité.
+</p>
 {% endblock %}
