--- a/templates/app/index.html.twig
+++ b/templates/app/index.html.twig
@@ -2,28 +2,15 @@
 
 {% block body %}
 <div class="row">
-    <div class="col-8 col-12-small">
+    <div class="col-12">
         <h1 class="sr-only">Accueil</h1>
         <h2>Présentation et objectifs de l'association</h2>
         <p class="text-justify">
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco 
-            laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nullapariatur.Excepteurs
-            id est laborum. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
-            Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-         </p>
-
-        <h2>Valeurs et représentation</h2>
+            Paris Esports est une association qui regroupe les organisations esportives locales et les joueurs. Son objectif est de fédérer l'écosystème local autour de la <b>structuration de l’esport amateur en Île-de-France.</b>
+        </p>
         <p class="text-justify">
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco 
-            laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nullapariatur.Excepteurs
-            id est laborum. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
-            Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+              Créer à l’échelle locale une organisation fédératrice en amenant les organisations esportives à travailler ensemble pour établir un interlocuteur légitime et représentatif auprès des institutions locales.
          </p>
-    </div>
-
-    <div class="col-4 col-12-small">
-        <h2>Actualités de l'association</h2>
-        <a class="twitter-timeline" data-lang="fr" data-link-color="#19CF86" data-height="900" href="https://twitter.com/Paris_Esports?ref_src=twsrc%5Etfw" data-chrome="noheader nofooter noborders transparent"></a> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
     </div>
 </div>
 {% endblock %}
