--- a/templates/app/membership.html.twig
+++ b/templates/app/membership.html.twig
@@ -16,7 +16,8 @@
         <li>Les Yvelines (78)</li>
         <li>L'Essonne (91)</li>
         <li>Les Hauts-de-Seine (92)</li>
-        <li>La Seine-Saint-Denis (93) - Le Val-de-Marne (94)</li>
+        <li>La Seine-Saint-Denis (93)</li>
+        <li>Le Val-de-Marne (94)</li>
         <li>Le Val-d'Oise (95)</li>
     </ul>
 </p>
