--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -1,3 +1,7 @@
+body {
+    font-family: 'Open Sans', sans-serif;
+}
+
 .text-center {
     text-align: center;
 }
@@ -9,4 +13,8 @@
 label.required:after {
     content: " *";
     color: red;
+}
+
+a:hover {
+    text-decoration: none;
 }
