--- a/templates/app/contact.html.twig
+++ b/templates/app/contact.html.twig
@@ -36,8 +36,7 @@
 {{ form_end(form) }}
 
 <p class="text-justify">
-    Vous êtes de la presse ?<br>
-    Vous retrouverez les ressources graphiques de Paris esports via <a href="bit.ly/2FtLq1P" target="_blank">ce lien</a>.<br>
-     Les communiqués de presse sont fournis au format PDF en fin de chaque actualité.
+    Vous êtes de la presse ? Vous retrouverez les ressources graphiques de Paris esports via <a href="https://bit.ly/2FtLq1P" target="_blank">ce lien</a>.<br>
+    Les communiqués de presse sont fournis au format PDF en fin de chaque actualité.
 </p>
 {% endblock %}
