--- a/templates/app/index.html.twig
+++ b/templates/app/index.html.twig
@@ -5,12 +5,25 @@
     <div class="col-12">
         <h1 class="sr-only">Accueil</h1>
         <h2>Présentation et objectifs de l'association</h2>
-        <p class="text-justify">
-            Paris Esports est une association qui regroupe les organisations esportives locales et les joueurs. Son objectif est de fédérer l'écosystème local autour de la <b>structuration de l’esport amateur en Île-de-France.</b>
-        </p>
-        <p class="text-justify">
-              Créer à l’échelle locale une organisation fédératrice en amenant les organisations esportives à travailler ensemble pour établir un interlocuteur légitime et représentatif auprès des institutions locales.
-         </p>
+        <p class="text-justify">Paris esports est une association qui regroupe les organisations esportives et les joueurs de Paris et d’Île-de-France. Son objectif est de fédérer l'écosystème esportif de la région.  Créer à l’échelle locale une organisation fédératrice en amenant les organisations esportives à travailler ensemble et établir un interlocuteur légitime et représentatif auprès des institutions locales.</p>
+
+        Les objectifs et chantiers sont nombreux, notamment :
+        <ul>
+            <li>Soutenir la création de clubs locaux, avec des formats adaptés pour encadrer les plus jeunes.</li>
+            <li>Contribuer à l’ouverture d’un centre esportif sur Paris, équipé pour les joueurs et les organisations locales.</li>
+            <li>Organiser des compétitions sur la région, pour tous les niveaux et pour tous les âges.</li>
+            <li>Travailler sur l’inclusion, les questions de mixité de genre et l’intégration des différents handicaps.</li>
+            <li>Former les travailleurs du secteur qui vont côtoyer le public notamment non familier avec l’esport.</li>
+        </ul>
+
+        <p class="text-justify">Si vous êtes un joueur, une association, une société vous pouvez nous rejoindre et compter sur l’association pour soutenir vos actions dans l’esport francilien !</p>
+
+        <h2>Actualités</h2>
+        <ul>
+            <li>AGE le 23 Novembre 2018</li>
+            <li>AGE le 19 Octobre 2018</li>
+            <li>Création le 13 Juillet 2018</li>
+        </ul>
     </div>
 </div>
 {% endblock %}
