--- a/templates/app/membership.html.twig
+++ b/templates/app/membership.html.twig
@@ -9,16 +9,16 @@
     L’inscription à l’association sera uniquement possible si vous résidez en Île -de-France.
 </p>
 
-<p class="text-justify">Les départements concernés :
-    <ul>
-        <li>La ville de Paris (75)</li>
-        <li>La Seine-et-Marne (77)</li>
-        <li>Les Yvelines (78)</li>
-        <li>L'Essonne (91)</li>
-        <li>Les Hauts-de-Seine (92)</li>
-        <li>La Seine-Saint-Denis (93)</li>
-        <li>Le Val-de-Marne (94)</li>
-        <li>Le Val-d'Oise (95)</li>
-    </ul>
-</p>
+Les départements concernés :
+<ul>
+    <li>La ville de Paris (75)</li>
+    <li>La Seine-et-Marne (77)</li>
+    <li>Les Yvelines (78)</li>
+    <li>L'Essonne (91)</li>
+    <li>Les Hauts-de-Seine (92)</li>
+    <li>La Seine-Saint-Denis (93)</li>
+    <li>Le Val-de-Marne (94)</li>
+    <li>Le Val-d'Oise (95)</li>
+</ul>
+
 {% endblock %}
