--- a/templates/app/resources.html.twig
+++ b/templates/app/resources.html.twig
@@ -3,7 +3,11 @@
 {% block title %}Ressources - {{ parent() }}{% endblock %}
 
 {% block body %}
-    <h2>Tutoriel(s)</h2>
+    <h2><b>Tutoriel(s)</b></h2>
 
-    <p class="text-justify">Créer une association (en cours de finalisation)</p>
+    <p class="text-justify"><i>Créer une association (en cours de finalisation)</i></p>
+
+    <h2><b>Appel(s) d'offre(s)</b></h2>
+
+    <p class="text-justify"><i>Il n'y a pas d'appel d'offre répertorié</i></p>
 {% endblock %}
