--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -37,7 +37,7 @@
 
         <footer id="footer">
             <section>
-                <h2>Paris Esports</h2>
+                <h2>Paris esports</h2>
                 <p>L’association pour fédérer l'écosystème esportif parisien !</p>
                 <ul class="actions">
                     <li><a href="{{ path('app_app_membership') }}" class="button">Adhérer</a></li>
@@ -47,9 +47,7 @@
                 <h2>Coordonnées</h2>
                 <dl class="alt">
                     <dt>Addresse</dt>
-                    <dd>157, boulevard McDonald 75019 Paris, France </dd>
-                    <dt>Email</dt>
-                    <dd><a href="mailto:bonjour@esports.paris">bonjour@esports.paris</a></dd>
+                    <dd>157, boulevard Macdonald 75019 Paris</dd>
                 </dl>
                 <ul class="icons">
                     <li><a href="https://twitter.com/Paris_Esports" class="icon fa-twitter alt" target="_blank"><span class="label">Twitter</span></a></li>
@@ -57,7 +55,7 @@
                     <li><a href="https://www.instagram.com/paris_esports/" class="icon fa-instagram alt" target="_blank"><span class="label">Instagram</span></a></li>
                 </ul>
             </section>
-            <p class="copyright">Paris esports &copy; Tous droits réservés.</p>
+            <a class="copyright" href="{{ path('app_app_copyrights') }}">Paris esports &copy; Tous droits réservés</a>
         </footer>
     </div>
 
